--- a/style.css
+++ b/style.css
@@ -580,7 +580,7 @@ h1:hover span {
   --text: #fff;
   --check: #0f0;
   --disabled: #c3c8de;
-  --width: 400px;
+  --width: 100%;
   --height: 180px;
   --border-radius: 10px;
   background: var(--background);
