--- a/style.css
+++ b/style.css
@@ -22,6 +22,13 @@ body {
 html /* Very useful simple line of code down below ✔*/ {
   scroll-behavior: smooth;
 }
+.flexBox {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  margin-top: 20px;
+}
 #preloader {
   background-color: #000;
   background-image: url(Images/cat.gif);
@@ -164,6 +171,7 @@ html /* Very useful simple line of code down below ✔*/ {
 header {
   display: flex;
   justify-content: center;
+  text-align: center;
   align-items: center;
   position: relative;
   height: 100vh;
@@ -941,4 +949,64 @@ h1:hover span {
     grid-template-columns: repeat(auto-fit, minmax(400px, 1fr));
     justify-content: center;
   }
+}
+
+/* From Uiverse.io by eduardo-amaro-maciel */
+.animeBtn {
+  width: 150px;
+  height: 50px;
+  border: 1px solid #333;
+  font-size: 20px;
+  cursor: pointer;
+  -webkit-tap-highlight-color: transparent;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  position: relative;
+  z-index: 0;
+  transition: 1s;
+  color: #fff;
+}
+
+.animeBtn::before,
+.animeBtn::after {
+  position: absolute;
+  background: transparent;
+  z-index: -1;
+  transition: 1s;
+  content: '';
+}
+
+.animeBtn::before {
+  height: 50px;
+  width: 130px;
+}
+
+.animeBtn::after {
+  width: 150px;
+  height: 30px;
+}
+
+.noselect {
+  -webkit-touch-callout: none;
+  -webkit-user-select: none;
+  -khtml-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+}
+
+.animeBtn:hover::before {
+  width: 0px;
+  background: #e8e8e8;
+}
+
+.animeBtn:hover::after {
+  height: 0px;
+  background: #fff;
+}
+
+.animeBtn:hover {
+  background: #fff;
+  color: #000;
 }
