Thank you PopUp updated

--- a/style.css
+++ b/style.css
@@ -1010,3 +1010,233 @@ h1:hover span {
   background: #fff;
   color: #000;
 }
+/* <!-- >>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>Thank you card<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<< --> */
+/* From Uiverse.io by gharsh11032000 */
+.card {
+  position: fixed;
+  width: 60%;
+  height: 80%;
+  background-color: #000;
+  border-radius: 10px;
+  display: none;
+  align-items: center;
+  justify-content: center;
+  overflow: hidden;
+  perspective: 1000px;
+  box-shadow: 0 0 0 5px #ffffff80;
+  transition: all 0.6s cubic-bezier(0.175, 0.885, 0.32, 1.275);
+  z-index: 300;
+  color: #fff;
+}
+
+.card svg {
+  width: 48px;
+  fill: #333;
+  transition: all 0.6s cubic-bezier(0.175, 0.885, 0.32, 1.275);
+}
+
+.card:hover {
+  transform: scale(1.05);
+  box-shadow: 0 8px 16px rgba(255, 255, 255, 0.2);
+}
+
+.card__content {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  padding: 20px;
+  box-sizing: border-box;
+  background-color: #000;
+  transform: rotateX(-90deg);
+  transform-origin: bottom;
+  transition: all 0.6s cubic-bezier(0.175, 0.885, 0.32, 1.275);
+  display: grid;
+  justify-content: center;
+  text-align: center;
+  align-items: center;
+  color: #fff;
+}
+
+.card:hover .card__content {
+  transform: rotateX(0deg);
+}
+
+.card__title {
+  margin: 0;
+  font-size: 24px;
+  color: #fff;
+  font-weight: 700;
+}
+
+.card:hover svg {
+  scale: 0;
+}
+
+.card__description {
+  margin: 10px 0 0;
+  font-size: 14px;
+  font-family: sans-serif;
+  line-height: 1.4;
+}
+/* >>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>> Thank You Button<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<< */
+/* From Uiverse.io by devanshsatwara */
+.ui-btn {
+  --btn-default-bg: #000;
+  --btn-padding: 15px 20px;
+  --btn-hover-bg: #001908;
+  --btn-transition: 0.3s;
+  --btn-letter-spacing: 0.1rem;
+  --btn-animation-duration: 1.2s;
+  --btn-shadow-color: rgba(0, 0, 0, 0.137);
+  --btn-shadow: 0 2px 10px 0 var(--btn-shadow-color);
+  --hover-btn-color: #0f0;
+  --default-btn-color: #fff;
+  --font-size: 16px;
+  --font-weight: 600;
+}
+
+/* button settings 👆 */
+
+.ui-btn {
+  text-align: center;
+  box-sizing: border-box;
+  padding: var(--btn-padding);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  color: var(--default-btn-color);
+  font: var(--font-weight) var(--font-size) var(--font-family);
+  background: var(--btn-default-bg);
+  cursor: pointer;
+  transition: var(--btn-transition);
+  overflow: hidden;
+  box-shadow: var(--btn-shadow);
+  border-radius: 10px;
+  border: 2px solid #2a2b3a;
+  width: 20%;
+}
+
+.ui-btn span {
+  letter-spacing: var(--btn-letter-spacing);
+  transition: var(--btn-transition);
+  box-sizing: border-box;
+  position: relative;
+  background: inherit;
+}
+
+.ui-btn span::before {
+  box-sizing: border-box;
+  position: absolute;
+  content: '';
+  background: inherit;
+}
+
+.ui-btn:hover,
+.ui-btn:focus {
+  background: var(--btn-default-bg);
+  box-shadow: 0px 0px 10px 0px #0f0;
+  border: 2px solid #0f0;
+}
+
+.ui-btn:hover span,
+.ui-btn:focus span {
+  color: var(--hover-btn-color);
+}
+
+.ui-btn:hover span::before,
+.ui-btn:focus span::before {
+  animation: chitchat linear both var(--btn-animation-duration);
+}
+
+@keyframes chitchat {
+  0% {
+    content: '#';
+  }
+
+  5% {
+    content: '.';
+  }
+
+  10% {
+    content: '^{';
+  }
+
+  15% {
+    content: '-!';
+  }
+
+  20% {
+    content: '#$_';
+  }
+
+  25% {
+    content: '№:0';
+  }
+
+  30% {
+    content: '#{+.';}35%{content: '@}-?';
+  }
+
+  40% {
+    content: '?{4@%';
+  }
+
+  45% {
+    content: '=.,^!';
+  }
+
+  50% {
+    content: '?2@%';
+  }
+
+  55% {
+    content: '\;1}]';
+  }
+
+  60% {
+    content: '?{%:%';
+    right: 0;
+  }
+
+  65% {
+    content: '|{f[4';
+    right: 0;
+  }
+
+  70% {
+    content: '{4%0%';
+    right: 0;
+  }
+
+  75% {
+    content: "'1_0<";
+    right: 0;
+  }
+
+  80% {
+    content: '{0%';
+    right: 0;
+  }
+
+  85% {
+    content: "]>'";
+    right: 0;
+  }
+
+  90% {
+    content: '4';
+    right: 0;
+  }
+
+  95% {
+    content: '2';
+    right: 0;
+  }
+
+  100% {
+    content: '';
+    right: 0;
+  }
+}
