Hid Thank You Card

--- a/style.css
+++ b/style.css
@@ -1017,7 +1017,7 @@ h1 span {
   height: 80%;
   background-color: #000;
   border-radius: 10px;
-  display: flex;
+  display: none;
   align-items: center;
   justify-content: center;
   overflow: hidden;
