--- a/style.css
+++ b/style.css
@@ -520,6 +520,7 @@ h1 span {
   padding: 7px;
   min-width: fit-content;
   width: 25%;
+  margin: 10px;
 }
 .btn:hover {
   background-color: #0f0;
@@ -958,7 +959,8 @@ h1 span {
 }
 
 /* From Uiverse.io by eduardo-amaro-maciel */
-.animeBtn {
+.actionBtn {
+  margin: 10px;
   width: 150px;
   height: 50px;
   border: 1px solid #333;
@@ -974,8 +976,8 @@ h1 span {
   color: #fff;
 }
 
-.animeBtn::before,
-.animeBtn::after {
+.actionBtn::before,
+.actionBtn::after {
   position: absolute;
   background: transparent;
   z-index: -1;
@@ -983,12 +985,12 @@ h1 span {
   content: '';
 }
 
-.animeBtn::before {
+.actionBtn::before {
   height: 50px;
   width: 130px;
 }
 
-.animeBtn::after {
+.actionBtn::after {
   width: 150px;
   height: 30px;
 }
@@ -1002,17 +1004,17 @@ h1 span {
   user-select: none;
 }
 
-.animeBtn:hover::before {
+.actionBtn:hover::before {
   width: 0px;
   background: #e8e8e8;
 }
 
-.animeBtn:hover::after {
+.actionBtn:hover::after {
   height: 0px;
   background: #fff;
 }
 
-.animeBtn:hover {
+.actionBtn:hover {
   background: #fff;
   color: #000;
 }
@@ -1024,7 +1026,7 @@ h1 span {
   height: 80%;
   background-color: #000;
   border-radius: 10px;
-  display: flex;
+  display: none;
   align-items: center;
   justify-content: center;
   overflow: hidden;
@@ -1250,4 +1252,205 @@ h1 span {
     content: '';
     right: 0;
   }
+}
+
+/* <!-- >>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>Terms of Service<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<< --> */
+/* From Uiverse.io by Admin12121 */
+.button,
+.input,
+.select,
+.textarea {
+  font: inherit;
+}
+
+a {
+  color: inherit;
+}
+.modal {
+  position: fixed;
+  z-index: 400;
+  color: #fff;
+  width: 100vw;
+  height: 100vh;
+  display: none;
+  justify-content: center;
+  align-items: center;
+  background-color: #00000080;
+}
+.modal-container {
+  max-height: 400px;
+  max-width: 500px;
+  margin-left: auto;
+  margin-right: auto;
+  background-color: #000;
+  border-radius: 16px;
+  overflow: hidden;
+  display: flex;
+  flex-direction: column;
+  box-shadow: 0 15px 30px 0 rgba(0, 0, 0, 0.25);
+}
+
+@media (max-width: 600px) {
+  .modal-container {
+    width: 90%;
+  }
+}
+
+.modal-container-header {
+  padding: 16px 32px;
+  border-bottom: 1px solid #ddd;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.modal-container-title {
+  display: flex;
+  align-items: center;
+  gap: 8px;
+  line-height: 1;
+  font-weight: 700;
+  font-size: 1.125;
+  color: #fff;
+}
+
+.modal-container-title svg {
+  width: 32px;
+  height: 32px;
+  color: #0f0;
+}
+
+.modal-container-body {
+  padding: 24px 32px 51px;
+  overflow-y: auto;
+}
+
+.rtf h1,
+.rtf h2,
+.rtf h3,
+.rtf h4,
+.rtf h5,
+.rtf h6 {
+  font-weight: 700;
+}
+
+.rtf h1 {
+  font-size: 1.5rem;
+  line-height: 1.125;
+}
+
+.rtf h2 {
+  font-size: 1.25rem;
+  line-height: 1.25;
+}
+
+.rtf h3 {
+  font-size: 1rem;
+  line-height: 1.5;
+}
+
+.rtf > * + * {
+  margin-top: 1em;
+}
+
+.rtf > * + :is(h1, h2, h3) {
+  margin-top: 2em;
+}
+
+.rtf > :is(h1, h2, h3) + * {
+  margin-top: 0.75em;
+}
+
+.rtf ul,
+.rtf ol {
+  margin-left: 20px;
+  list-style-position: inside;
+}
+
+.rtf ol {
+  list-style: numeric;
+}
+
+.rtf ul {
+  list-style: disc;
+}
+
+.modal-container-footer {
+  padding: 20px 32px;
+  display: flex;
+  align-items: center;
+  justify-content: flex-end;
+  border-top: 1px solid #ddd;
+  gap: 12px;
+  position: relative;
+}
+
+.modal-container-footer:after {
+  content: '';
+  display: block;
+  position: absolute;
+  top: -51px;
+  left: 24px;
+  right: 24px;
+  height: 50px;
+  flex-shrink: 0;
+  background-image: linear-gradient(to top, rgba(0, 0, 0, 0.75), transparent);
+  pointer-events: none;
+}
+
+.button {
+  padding: 12px 20px;
+  border-radius: 8px;
+  background-color: transparent;
+  border: 0;
+  font-weight: 600;
+  cursor: pointer;
+  transition: 0.15s ease;
+  color: #fff;
+}
+
+.button.is-ghost:hover,
+.button.is-ghost:focus {
+  background-color: red;
+}
+
+.button.is-primary {
+  background-color: #0f0;
+  color: #fff;
+}
+
+.button.is-primary:hover,
+.button.is-primary:focus {
+  background-color: #0f0;
+}
+
+.icon-button {
+  padding: 0;
+  border: 0;
+  background-color: transparent;
+  width: 40px;
+  height: 40px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  line-height: 1;
+  cursor: pointer;
+  border-radius: 8px;
+  transition: 0.15s ease;
+  color: #fff;
+}
+
+.icon-button svg {
+  width: 24px;
+  height: 24px;
+  cursor: pointer;
+}
+
+.icon-button svg:hover,
+.icon-button svg:focus {
+  background-color: #fff;
+}
+
+#closeToS {
+  display: none;
 }
