--- a/style.css
+++ b/style.css
@@ -1323,58 +1323,24 @@ a {
 .modal-container-body {
   padding: 24px 32px 51px;
   overflow-y: auto;
+  font-family: Arial, sans-serif;
+  text-align: start;
+  background-color: #001908;
+  color: #fff;
 }
-
-.rtf h1,
-.rtf h2,
-.rtf h3,
-.rtf h4,
-.rtf h5,
-.rtf h6 {
-  font-weight: 700;
+.modal-container-body h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  margin-top: 20px;
+  margin-bottom: 20px;
 }
-
-.rtf h1 {
-  font-size: 1.5rem;
-  line-height: 1.125;
+.modal-container-body p {
+  margin-top: 20px;
+  margin-bottom: 20px;
 }
-
-.rtf h2 {
-  font-size: 1.25rem;
-  line-height: 1.25;
-}
-
-.rtf h3 {
-  font-size: 1rem;
-  line-height: 1.5;
-}
-
-.rtf > * + * {
-  margin-top: 1em;
-}
-
-.rtf > * + :is(h1, h2, h3) {
-  margin-top: 2em;
-}
-
-.rtf > :is(h1, h2, h3) + * {
-  margin-top: 0.75em;
-}
-
-.rtf ul,
-.rtf ol {
-  margin-left: 20px;
-  list-style-position: inside;
-}
-
-.rtf ol {
-  list-style: numeric;
-}
-
-.rtf ul {
-  list-style: disc;
-}
-
 .modal-container-footer {
   padding: 20px 32px;
   display: flex;
