--- a/style.css
+++ b/style.css
@@ -1261,6 +1261,7 @@ h1 span {
 .select,
 .textarea {
   font: inherit;
+  margin-left: 10px;
 }
 
 a {
@@ -1323,9 +1324,9 @@ a {
 .modal-container-body {
   padding: 24px 32px 51px;
   overflow-y: auto;
-  font-family: Arial, sans-serif;
+  font-family: Open-Sans, sans-serif;
   text-align: start;
-  background-color: #001908;
+  background-image: linear-gradient(to bottom, #011608, rgb(1, 32, 1));
   color: #fff;
 }
 .modal-container-body h1,
@@ -1334,6 +1335,7 @@ h3,
 h4,
 h5,
 h6 {
+  font-family: Pixelify Sans, sans-serif;
   margin-top: 20px;
   margin-bottom: 20px;
 }
@@ -1360,7 +1362,11 @@ h6 {
   right: 24px;
   height: 50px;
   flex-shrink: 0;
-  background-image: linear-gradient(to top, rgba(0, 0, 0, 0.75), transparent);
+  background-image: linear-gradient(
+    to top,
+    rgba(0, 0, 0, 0.863) 20%,
+    transparent 80%
+  );
   pointer-events: none;
 }
 
