--- a/style.css
+++ b/style.css
@@ -602,6 +602,7 @@ h1 span {
   grid-template-columns: 30px auto;
   align-items: center;
   justify-content: center;
+  pointer-events: none;
 }
 
 #checklist label {
