--- a/style.css
+++ b/style.css
@@ -55,9 +55,6 @@ html /* Very useful simple line of code down below ✔*/ {
   position: relative;
   top: 20%;
 }
-#Loading span {
-  font-family: 'Open Sans', sans-serif;
-}
 .myName {
   color: white;
 }
@@ -201,7 +198,6 @@ header::before {
 h1 {
   position: relative;
   font-size: 2em;
-  letter-spacing: 0.02em;
   cursor: pointer;
   font-weight: 500;
 }
@@ -280,7 +276,6 @@ h1 span {
 }
 #Tino {
   width: 100%;
-  border-radius: 100%;
 }
 .AboutC2 {
   flex-basis: 70%;
@@ -305,7 +300,6 @@ h1 span {
   top: 5%;
   font-size: 1.1rem;
   height: fit-content;
-  letter-spacing: 3px;
   margin-right: 10px;
 }
 .Extra {
@@ -319,7 +313,6 @@ h1 span {
   display: none;
   position: relative;
   font-size: 1.3rem;
-  letter-spacing: 3px;
   justify-content: center;
 }
 .View.Activeview {
@@ -397,7 +390,7 @@ h1 span {
   text-align: center;
   width: 100%;
   max-width: 300px;
- 
+
   margin: 5px;
   transition: background 0.5s;
   cursor: pointer;
@@ -405,8 +398,7 @@ h1 span {
 .skill-card:hover {
   background-color: var(--black);
 }
-.bounce
-{
+.bounce {
   animation: bounce 2s infinite ease-in-out;
   animation-delay: var(--delay, 0s);
 }
@@ -894,8 +886,19 @@ h1 span {
   .AboutC2 {
     flex-basis: 100%; /*This is used to make the columns stack on top of each other*/
   }
-  .AboutMe p {
-    font-size: 0.6em;
+  .AboutMe {
+    font-size: 0.9rem;
+  }
+  #Tino {
+    width: 300px;
+  }
+  #TechStack,
+  #Education,
+  #Experience {
+    font-size: 0.7rem;
+  }
+  .View {
+    font-size: 0.7rem;
   }
   .View img {
     width: 10vw;
