--- a/style.css
+++ b/style.css
@@ -272,7 +272,7 @@ h1 span {
   height: fit-content;
 }
 .AboutC1 {
-  flex-basis: 25%;
+  flex-basis: 55%;
 }
 #Tino {
   width: 100%;
@@ -281,6 +281,7 @@ h1 span {
   flex-basis: 70%;
 }
 .subTitle {
+  -delay: 1.5s;
   display: block;
   color: white;
   font-size: 3em;
@@ -292,7 +293,7 @@ h1 span {
   font-family: 'Pixelify Sans', sans-serif;
 }
 .AboutMe p {
-  background-color: #001908;
+  background-image: linear-gradient(45deg, #001908, #000000, #001908);
   padding: 15px;
   border-radius: 10px;
   font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
@@ -361,11 +362,15 @@ h1 span {
 .View ul {
   list-style: none;
 }
-.skills-section {
+.Skills {
   padding: 40px 20px;
   max-width: 1200px;
   margin: 0 auto;
   text-align: center;
+  opacity: 0;
+  transition: all 1s;
+  filter: blur(5px);
+  transform: translateX(100%);
 }
 
 .section-title {
@@ -378,19 +383,19 @@ h1 span {
 .skills-container {
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(350px, 1fr));
-  gap: 20px;
+  gap: 30px;
   justify-items: center;
 }
 
 /* Skill card */
 .skill-card {
-  background-color: var(--darkGreen);
+  background-image: linear-gradient(45deg, #001908, #000000, #001908);
   box-shadow: 6px 4px 8px var(--brightGreen);
   padding: 20px;
   text-align: center;
   width: 100%;
-  max-width: 300px;
-
+  max-width: 200px;
+  height: 250px;
   margin: 5px;
   transition: background 0.5s;
   cursor: pointer;
@@ -547,14 +552,15 @@ h1 span {
 .btn:hover {
   background-color: var(--brightGreen);
 }
-.Contact {
-  background-color: #001908;
+.footer {
+  background-image: linear-gradient(90deg, #001908, #000000, #001908);
   padding: 2px 0;
   height: fit-content;
   color: white;
   display: block;
   text-align: center;
   position: relative;
+  text-decoration: none;
 }
 .Contact h3 {
   margin-bottom: 0;
@@ -1335,8 +1341,8 @@ h6 {
 #closeToS {
   display: none;
 }
-
-#ContactSection {
+/* >>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>> Contact Section<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<< */
+.Contacts {
   width: 100vw;
   height: fit-content;
   padding: 10px;
@@ -1353,6 +1359,7 @@ h6 {
   justify-content: center;
   align-items: center;
   text-align: center;
+  padding: 20px;
 }
 #FooterSection {
   font-size: 1rem;
@@ -1451,6 +1458,9 @@ h6 {
     font-size: 0.9em;
     text-align: center;
   }
+  .AboutC2 {
+    margin: 20px;
+  }
   .ui-btn {
     width: fit-content;
   }
@@ -1509,6 +1519,16 @@ h6 {
     width: 12vw;
     float: none;
   }
+  .skills-container {
+    grid-template-columns: auto auto;
+  }
+  .skill-card {
+    width: 200px;
+    height: 150px;
+  }
+  .skill-card h3 {
+    font-size: 1rem;
+  }
   #FooterSection {
     font-size: 0.6rem;
   }
@@ -1547,11 +1567,6 @@ h6 {
     grid-template-columns: repeat(2, 1fr);
     color: var(--brightGreen);
     gap: 2px;
-  }
-  .SkillsList {
-    display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(400px, 1fr));
-    justify-content: center;
   }
   #FooterSection {
     font-size: 0.8rem;
