--- a/style.css
+++ b/style.css
@@ -371,6 +371,7 @@ h1 span {
   transition: all 1s;
   filter: blur(5px);
   transform: translateX(100%);
+  overflow-x: hidden;
 }
 
 .section-title {
@@ -1351,6 +1352,7 @@ h6 {
   align-items: center;
   text-align: center;
   font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+  overflow-x: hidden;
 }
 #contactContainer {
   width: 100%;
