--- a/style.css
+++ b/style.css
@@ -127,9 +127,21 @@ html /* Very useful simple line of code down below ✔*/ {
   transition-delay: 1s, 1.5s, 1.5s;
   rotate: 135deg;
 }
+#Me {
+  display: grid;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  margin-top: 20px;
+  position: relative;
+}
 #Me p {
   color: #fff;
 }
+#Me h4 {
+  font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+}
+
 .menu.active li:hover a::before {
   background: var(--clr);
   color: #000713;
@@ -615,6 +627,12 @@ h1 span {
 }
 /* >>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>Checkbox list<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<< */
 /* From Uiverse.io by JkHuger */
+#checkBox {
+  place-content: center;
+  text-align: center;
+  align-content: center;
+  place-items: center;
+}
 #checklist {
   --background: #00000065;
   --text: #fff;
@@ -623,6 +641,7 @@ h1 span {
   --width: 100%;
   --height: 180px;
   --border-radius: 10px;
+  font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
   background: var(--background);
   width: var(--width);
   height: var(--height);
@@ -880,10 +899,10 @@ h1 span {
 /* From Uiverse.io by eduardo-amaro-maciel */
 .actionBtn {
   margin: 10px;
-  width: 300px;
+  width: 150px;
   height: 50px;
   border: 1px solid #333;
-  font-size: 20px;
+  font-size: 1rem;
   cursor: pointer;
   -webkit-tap-highlight-color: transparent;
   display: flex;
@@ -1426,6 +1445,13 @@ h6 {
     rgba(255, 255, 255, 0) 100%
   );
 }
+.hidden {
+  display: none;
+}
+.visible {
+  display: block;
+}
+
 /*-----------------------------------Responsive Design--------------------------------------------------------*/
 @media only screen and (min-width: 251px) and (max-width: 600px) /* 250px optimisation to come */ {
   .header {
